--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-inverse-default" role="navigation">
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="container-fluid">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Toggle navigation</span>
@@ -16,5 +17,8 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li> 
     </ul>
-  </div><!-- /.navbar-collapse -->
+
+  </div> <!-- /.navbar-collapse -->
+  </div><!-- /.container -->
+
 </nav>
