--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Pinteresting</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<%= render 'layouts/header'%>
-<div class="container">
-	<%= yield %>
-</div>
-</body>
+	<head>
+	  <title>Pinteresting</title>
+	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
+		<%= render 'layouts/header'%>
+		<div class="container">
+			       <!-- <p class="notice"><%= notice %></p> -->
+       			   <!-- <p class="alert"><%= alert %></p> -->
+			<%= yield %>
+			<% flash.each do |name, msg| %>
+     			<%= content_tag(:div, msg, class: "alert alert-info") %>
+			<% end %>
+		</div>
+	</body>
 </html>
